--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,18 +35,17 @@ android {
     buildFeatures {
         viewBinding true
     }
+    packagingOptions {
+        exclude 'META-INF/NOTICE.md'
+        exclude 'META-INF/LICENSE.md'
+    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -61,5 +60,19 @@ dependencies {
 
     //Authentication
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //Email
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'com.sun.mail:android-mail:1.6.6'
+    implementation 'com.sun.mail:android-activation:1.6.6'
+    implementation 'androidx.security:security-crypto:1.0.0'
+
+    implementation 'com.braintreepayments:card-form:3.1.1'
+
+    implementation 'androidx.security:security-crypto:1.0.0'
 
 }
