--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,17 +2,19 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
 
     // TODO: Google services
     id 'com.google.gms.google-services'
 }
 
 android {
-    compileSdk 30
+    compileSdk 31
+    buildToolsVersion "31"
 
     defaultConfig {
         applicationId "my.com.fashionappstaff"
-        minSdk 28
+        minSdk 26
         targetSdk 30
         versionCode 1
         versionName "1.0"
@@ -40,39 +42,44 @@ android {
         exclude 'META-INF/LICENSE.md'
     }
 }
-
+repositories {
+    mavenCentral()
+}
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     // Firestore
-    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.2-native-mt'
 
     // Dependency for material Components
     implementation 'com.google.android.material:material:1.4.0'
 
     //Authentication
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //Email
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
-    implementation 'com.sun.mail:android-mail:1.6.6'
-    implementation 'com.sun.mail:android-activation:1.6.6'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'com.sun.mail:android-mail:1.6.7'
+    implementation 'com.sun.mail:android-activation:1.6.7'
     implementation 'androidx.security:security-crypto:1.0.0'
 
-    implementation 'com.braintreepayments:card-form:3.1.1'
+    implementation 'com.braintreepayments:card-form:5.2.0'
 
-    implementation 'androidx.security:security-crypto:1.0.0'
+    //QR Code
+    implementation 'com.google.zxing:core:3.4.1'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
 
 }
